--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   flutter_webview_plugin: ^0.3.10+1
   dio: ^3.0.8
   sprintf: ^4.0.0
+  html: ^0.14.0+3
 
 dev_dependencies:
   flutter_test:
